Gem file and _config whitelist to hopefully fix the latest bug

--- a/_config.yml
+++ b/_config.yml
@@ -41,3 +41,7 @@ plugins:
 - jekyll-redirect-from
 - jekyll-paginate
 - jekyll-include-cache
+whitelist:
+  - jekyll-redirect-from
+  - jekyll-paginate
+  - jekyll-include-cache
